--- a/client/angular.json
+++ b/client/angular.json
@@ -23,8 +23,11 @@
               "src/assets"
             ],
             "styles": [
-              "node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "./node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
+              "./node_modules/bootswatch/dist/united/bootstrap.css",
+              "./node_modules/font-awesome/css/font-awesome.css",
+              "./node_modules/ngx-toastr/toastr.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -64,11 +67,11 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
-         "options":{
+          "options":{
             "sslKey": "./ssl/server.key",
             "sslCert": "./ssl/server.crt",
             "ssl": true
-         },
+          },
           "configurations": {
             "production": {
               "browserTarget": "client:build:production"
