--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^14.1.0",
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
+    "@kolkov/ngx-gallery": "^2.0.1",
     "bootstrap": "^4.6.2",
     "bootswatch": "^5.2.0",
     "font-awesome": "^4.7.0",
