--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "bootswatch": "^5.2.0",
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^9.0.0",
+    "ngx-spinner": "^9.0.1",
     "ngx-toastr": "^15.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
