--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "^4.6.2",
     "bootswatch": "^5.2.0",
     "font-awesome": "^4.7.0",
+    "ng2-file-upload": "^1.4.0",
     "ngx-bootstrap": "^9.0.0",
     "ngx-spinner": "^9.0.1",
     "ngx-toastr": "^15.0.0",
