--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "ng2-file-upload": "^1.4.0",
     "ngx-bootstrap": "^9.0.0",
     "ngx-spinner": "^9.0.1",
+    "ngx-timeago": "^2.0.0",
     "ngx-toastr": "^15.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
