--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
     "@kolkov/ngx-gallery": "^2.0.1",
+    "@microsoft/signalr": "^6.0.8",
     "bootstrap": "^4.6.2",
     "bootswatch": "^5.2.0",
     "font-awesome": "^4.7.0",
