--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -2,11 +2,12 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data source=datingapp.db"
   },
-  "TokenKey":"super secret unguessable key",
+  "TokenKey": "super secret unguessable key",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Information"
+      "Microsoft.AspNetCore": "Information",
+      "Microsoft": "Information"
     }
   }
 }
