--- a/client/package.json
+++ b/client/package.json
@@ -20,29 +20,34 @@
     "@angular/router": "^14.1.0",
     "@kolkov/ngx-gallery": "^2.0.1",
     "@microsoft/signalr": "^6.0.8",
-    "bootstrap": "^4.6.2",
+    "@types/jasminewd2": "^2.0.10",
+    "@types/node": "^18.7.9",
+    "bootstrap": "^5.2.0",
     "bootswatch": "^5.2.0",
+    "codelyzer": "^6.0.2",
     "font-awesome": "^4.7.0",
+    "jasmine-spec-reporter": "^7.0.0",
     "ng2-file-upload": "^1.4.0",
     "ngx-bootstrap": "^9.0.0",
-    "ngx-spinner": "^9.0.1",
+    "ngx-spinner": "^14.0.0",
     "ngx-timeago": "^2.0.0",
     "ngx-toastr": "^15.0.0",
-    "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
+    "rxjs": "^7.5.6",
+    "ts-node": "^10.9.1",
+    "tslib": "^2.4.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.1.0",
     "@angular/cli": "~14.1.0",
     "@angular/compiler-cli": "^14.1.0",
-    "@types/jasmine": "~4.0.0",
-    "jasmine-core": "~4.2.0",
+    "@types/jasmine": "^4.0.3",
+    "jasmine-core": "^4.3.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.0.0",
+    "karma-jasmine-html-reporter": "^2.0.0",
     "typescript": "~4.7.2"
   }
 }
